--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css"/>
-    <title>Expanding Carda</title>
+    <title>Expanding Cards</title>
 </head>
 <body>
     <div class="container">
-        <div class="panel active" style="background-image: url('https://images.unsplash.com/flagged/photo-1557533046-154fc97b729f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8dHJvcGljYWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60')">
+        <div class= "panel active" style="background-image: url('https://images.unsplash.com/photo-1527492662722-dbaf97270863?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')">
             <h3>Explore The World</h3>
         </div>
 
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1561571994-3c61c554181a?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHJvcGljYWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60')">
-            <h3>Explore The World</h3>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1551983914-4ab58d6b1018?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1075&q=80')">
+            <h3>Beautiful Architecture</h3>
         </div>
 
         <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1446822679794-fbd084d10491?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OXx8dHJhdmVsJTIwZ2V0YXdheXN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60')">
-            <h3>Explore The World</h3>
+            <h3>Amazing Sunset</h3>
         </div>
 
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1505662482633-714f2c0e066e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDF8fG5ld3lvcmslMjBuaWdodGxpZmV8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60')">
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1545324875-f4b91d62947c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')">
             <h3>City skyscrapper</h3>
         </div>
 
@@ -32,6 +32,8 @@
 
 
     </div>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
